Implementação API cadastro
